# Final-year-project

./: CMakeLists.txt  README.md  mpc  package.xml
asv_core/include/: asv_dynamics.hpp  environmental_forces.hpp  hydrodynamics.hpp
asv_core/src/: asv_dynamics.cpp  environmental_forces.cpp  hydrodynamics.cpp
common/include/: asv_control.hpp  asv_dynamics.hpp
config/: environment_params.yaml  global_planner_params.yaml  local_planner_params.yaml  mpc_controller_params.yaml  simulation_params.yaml
control/include/: mpc_controller.hpp
docs/api/: benchmark_api.md
docs/technical_details/: benchmark_methodology.md
docs/tutorials/: benchmark_tutorial.md
environment_representation/include/: force_field_model.hpp  grid_map_representation.hpp  map_representation.hpp  multi_resolution_grid.hpp  temporal_decay.hpp
environment_representation/src/: force_field_model.cpp  grid_map_representation.cpp  multi_resolution_grid.cpp  temporal_decay.cpp
evaluation/: run_benchmarks.sh
evaluation/include/: energy_metrics.hpp  obstacle_avoidance.hpp  path_quality.hpp
evaluation/scripts/: analyze_results.py  generate_pdf_report.py  generate_sample_data.py  generate_test_scenarios.py  simple_analysis.py
evaluation/src/: algorithm_benchmarking.cpp  energy_metrics.cpp  path_quality.cpp
evaluation/test_environments/complex/: complex_0.1.scenario  complex_0.5.scenario  complex_0.9.scenario
evaluation/test_environments/real_world/: real_world_0.5.scenario  real_world_0.9.scenario
evaluation/test_environments/simple/: simple_0.5.scenario  simple_0.9.scenario
include/environment_representation/: energy_cost_map.hpp  environment_map.hpp  multi_resolution_grid.hpp
include/global_planner/: a_star_planner.hpp  global_planner.hpp
include/local_planner/: local_planner.hpp  rrt_planner.hpp
include/planning/: a_star_planner.hpp  global_planner.hpp  global_planner_node.hpp  maritime_constraints.hpp  maritime_heuristics.hpp
launch/: hierarchical_planning.launch.py  simulation.launch.py
mpc_controller/: CMakeLists.txt
mpc_controller/include/controller/: mpc_controller.h
mpc_controller/src/: mpc_controller.cpp  mpc_controller.cpp.original
msg/: ASVState.msg  EnergyMetrics.msg  EnvironmentMap.msg  EnvironmentalForce.msg  PlannerStatus.msg  PlanningPath.msg
perception/include/: README.md
perception/src/: README.md
planning_hierarchy/global_planner/include/: energy_aware_astar.hpp  maritime_heuristics.hpp
planning_hierarchy/global_planner/src/: energy_aware_astar.cpp  maritime_heuristics.cpp
planning_hierarchy/local_planner/include/: biased_rrt.hpp  rrt_local_planner.hpp  rrt_planner.hpp  sampling_strategies.hpp
planning_hierarchy/local_planner/src/: biased_rrt.cpp  sampling_strategies.cpp
planning_hierarchy/planning_coordinator/include/: README.md
planning_hierarchy/planning_coordinator/src/: README.md
planning_hierarchy/trajectory_controller/include/: cost_functions.hpp  model_predictive_control.hpp  mpc_controller.hpp
planning_hierarchy/trajectory_controller/src/: cost_functions.cpp  model_predictive_control.cpp
simulation/include/: simulation_interface.hpp
simulation/models/: README.md
simulation/plugins/: README.md
simulation/worlds/: README.md
src/: main.cpp
src/environment_representation/: energy_cost_map.cpp  environment_map.cpp  multi_resolution_grid.cpp
src/global_planner/: a_star_planner.cpp  global_planner.cpp  global_planner_node.cpp
src/local_planner/: local_planner.cpp  local_planner_node.cpp  rrt_planner.cpp
src/planning/: a_star_planner.cpp  maritime_constraints.cpp  maritime_heuristics.cpp
srv/: ControllerCommand.srv  EnvironmentQuery.srv  GlobalPathRequest.srv  LocalPathAdaptation.srv  MapUpdate.srv
test_environments/ocean/: ocean.world
test_environments/real_world/: real_world_0.1.scenario
test_environments/simple/: simple_0.1.scenario
test_environments/workshop/: workshop.world
visualization/include/: README.md  environmental_forces_viz.hpp  path_visualizer.hpp
visualization/src/: README.md
